# katoolin

./: .gitignore  Changelog.txt  Ezzah  LICENSE  README.md  SECURITY.md  TODO  banner.txt  conf.sh  configuração.ini  docker_file_arch_linux  docker_file_debian  docker_file_ubuntu  install.sh  katoolin  katoolin.py  katoolin3.py  katoolin3install.py  main.spec  pyproject.toml  remove.py  setup.py  toollist.py  uninstall.sh  update.sh
.github/ISSUE_TEMPLATE/: message-to-author.md
.github/workflows/: cy.yml
asc/: backbox.asc  blackarch.asc  kalilinux.asc  keyfile.asc  parrot.asc
core/: categories.py  gear.py  katoolin.py  mechanism.py  menu.py  resources.py
core/tools/: exploitation_tools.py  extra.py  forensics_tools.py  hardware_hacking.py  information_gathering.py  load.py  maintaining_access.py  password_attacks.py  reporting_tools.py  reverse_engineering.py  sniffing_spoofing.py  stress_testing.py  vulnerability_analysis.py  web_applications.py  wireless_attacks.py
css/: interface.css
katoolin/: README.md  katoolin3install.py
katoolin/src/: apt_install.py  ferramentas.py  main.py  menus.py
maintenance/: README  README.md  deps.py  missing.py  search.py  sort.py  toollist.py
mirrorlists/: blackarch-mirrorlist
programas/: dependencias.json  programas.json
src/: apt_install.py  arquivo_temporario.py  comandos.py  dicionarios.py  excessoes.py  ferramentas.py  interface.py  ler_arquivos.py  main.py  menus.py  modelos.py  programas.py  utils.py
tests/: tests_interface.py
textos/: banner.txt  texto_bem_vindo.txt
